--- a/Handout/openswathmetabo.tex
+++ b/Handout/openswathmetabo.tex
@@ -3,28 +3,32 @@
 We would like to present an automated DIA/SWATH analysis workflow for metabolomics, which takes advantage of experiment specific target-decoy assay library generation. This allows for targeted extraction, scoring and statistical validation of metabolomics DIA data \cite{Rost2014}, \cite{Teleman2015}. 
 
 \subsection{Workflow}
-The workflow follows multiple steps (see Fig. \ref{fig:pipline_overview}). \textbf{Candidate identification.} Feature detection, adduct grouping and accurate mass search are applied on DDA data. \textbf{Library construction.} The knowledge determined from the DDA data, about  compound identification, its potential adduct and the corresponding fragment spectra are used to perform fragment annotation via compositional fragmentation trees sugin SIRIUS 4 \cite{Duhrkop2019}. Afterwards transitions, which are the reference of a precursor to its fragment ions are stored in a so-called assay library (Fig. \ref{fig:assay_library_generation}). Assay libraries usually contain additional metadata (i.e. retention time, peak intensities). FDR estimation is based on the target-decoy approach \cite{Elias2007}. For the generation of the MS2 decoys, the fragmentation tree-based rerooting method by Passatutto ensure the consistency of decoy spectra (Fig.\ref{fig:decoy_generation}) \cite{Scheubert2017}. The target-decoy assay library is then used to analyse the SWATH data. \textbf{Targeted extraction.} Chromatogram extraction and peak-group scoring. This step is performed using an algorithm based on OpenSWATH \cite{Rost2014} for metabolomics data. \textbf{Statistical validation} FDR estimation uses the PyProphet algorithm \cite{Teleman2015}. To prevent overfitting we chose the simpler linear model (LDA) for target-decoy discrimination in PyProphet, using MS1 and MS2 scoring with low correlated scores.
+The workflow follows multiple steps (see Fig. \ref{fig:pipline_overview}). 
 
-\begin{figure}[!t]
+\begin{figure}[!ht]
   \centering
   \includegraphics[width=0.7\textwidth]{graphics/openswathmetabo/pipeline_overview.png}
   \caption{\textbf{DIAMetAlyzer - pipeline for assay library generation and targeted analysis with statistical validation} DDA data is used for candidate identification containing feature detection, adduct grouping and accurate mass search. Library construction uses fragment annotation via compositional fragmentation trees and decoy generation using a fragmentation tree re-rooting method to create a target-decoy assay library. This library is used in a second step to analyse metabolomics DIA data performing targeted extraction, scoring and statistical validation (FDR estimation).}
   \label{fig:pipline_overview}
 \end{figure}
 
-\begin{figure}[!t]
+\begin{figure}[!ht]
   \centering
   \includegraphics[width=0.8\textwidth]{graphics/openswathmetabo/assay_library_generation.png}
   \caption{\textbf{Assay library generation}  The results of the compound identification (feature, molecular formula, adduct), with the corresponding fragment spectra  for the feature, are used to perform fragment annotation via SIRIUS, using the compositional fragmentation trees. Then, the n highest intensity transitions are extracted and stored in the assay library.}
   \label{fig:assay_library_generation}
 \end{figure}
 
-\begin{figure}[!t]
+\begin{figure}[!ht]
   \centering
   \includegraphics[width=0.8\textwidth]{graphics/openswathmetabo/decoy_generation.png}
   \caption{\textbf{Decoy generation} The compositional fragmentations trees from the step above are used to run the fragmentation tree re-rooting method from Passatutto, generating a compound specific decoy MS2 spectrum. Here, the n highest intensity decoy transitions are extracted and stored in the target-decoy assay library.}
   \label{fig:decoy_generation}
 \end{figure}
+
+\textbf{Candidate identification.} Feature detection, adduct grouping and accurate mass search are applied on DDA data. \textbf{Library construction.} The knowledge determined from the DDA data, about  compound identification, its potential adduct and the corresponding fragment spectra are used to perform fragment annotation via compositional fragmentation trees sugin SIRIUS 4 \cite{Duhrkop2019}. Afterwards transitions, which are the reference of a precursor to its fragment ions are stored in a so-called assay library (Fig. \ref{fig:assay_library_generation}). Assay libraries usually contain additional metadata (i.e. retention time, peak intensities). FDR estimation is based on the target-decoy approach \cite{Elias2007}. For the generation of the MS2 decoys, the fragmentation tree-based rerooting method by Passatutto ensure the consistency of decoy spectra (Fig.\ref{fig:decoy_generation}) \cite{Scheubert2017}. The target-decoy assay library is then used to analyse the SWATH data. \textbf{Targeted extraction.} Chromatogram extraction and peak-group scoring. This step is performed using an algorithm based on OpenSWATH \cite{Rost2014} for metabolomics data. \textbf{Statistical validation} FDR estimation uses the PyProphet algorithm \cite{Teleman2015}. To prevent overfitting we chose the simpler linear model (LDA) for target-decoy discrimination in PyProphet, using MS1 and MS2 scoring with low correlated scores.
+
+
 
 \subsection{Prerequisites}
 Apart from the usual KNIME nodes, the workflow uses python scripting nodes. One basic requirement for the installation of python packages, in particular pyOpenMS, is a package manager for python. Using conda as an environment manger allows to specify a specific environment in the KNIME settings (\menu{File > Preferences > KNIME > Python})
@@ -33,78 +37,78 @@ Apart from the usual KNIME nodes, the workflow uses python scripting nodes. One 
 We suggest do use a virtual environment for the Python 3 installation on windows. 
 Here you can install miniconda and follow the further instructions. \\
 
-\begin{description}
+\begin{enumerate}
   \item Create new conda python environment
-  	    \begin{listing}
+  	    \begin{code}
     	\begin{minted}{bash}
-   			conda create -n py39 python=3.9
+conda create -n py39 python=3.9
    		\end{minted}
-   		\end{listing}
+   		\end{code}
   \item Activate py39 environment
-    	\begin{listing}
+    	\begin{code}
     	\begin{minted}{bash}
-    		conda activate py39    
+conda activate py39    
     	\end{minted}
-    	\end{listing}
+    	\end{code}
   \item Install pip (see above)
   \item On the command line:
-    	\begin{listing}
+    	\begin{code}
 		\begin{minted}{bash}
-    		python -m pip install -U pip
-    		python -m pip install -U numpy
-    		python -m pip install -U pandas
-    		python -m pip isntall -U pyprophet
-    		python -m pip install -U pyopenms
+python -m pip install -U pip
+python -m pip install -U numpy
+python -m pip install -U pandas
+python -m pip isntall -U pyprophet
+python -m pip install -U pyopenms
     \end{minted}
-    \end{listing}
-\end{description}
+    \end{code}
+\end{enumerate}
 
 \subsubsection{MacOS}
 We suggest do use a virtual environment for the Python 3 installation on Mac. 
 Here you can install miniconda and follow the further instructions. \\
 
-\begin{description}
+\begin{enumerate}
   \item Create new conda python environment
-      	\begin{listing}
+      	\begin{code}
     	\begin{minted}{bash}
-    		conda create -n py39 python=3.9
+conda create -n py39 python=3.9
     	\end{minted}
-    	\end{listing}
+    	\end{code}
     \item Activate py39 environment
-        \begin{listing}
+        \begin{code}
     	\begin{minted}{bash}
-    		conda activate py39
+conda activate py39
     	\end{minted}
-    	\end{listing}
+    	\end{code}
   \item On the Terminal:
-      	\begin{listing}
+      	\begin{code}
 		\begin{minted}{bash}
-    		python -m pip install -U pip
-    		python -m pip install -U numpy
-    		python -m pip install -U pandas
-    		python -m pip isntall -U pyprophet
-    		python -m pip install -U pyopenms
+python -m pip install -U pip
+python -m pip install -U numpy
+python -m pip install -U pandas
+python -m pip isntall -U pyprophet
+python -m pip install -U pyopenms
 		\end{minted}
-		\end{listing}
-\end{description}
+		\end{code}
+\end{enumerate}
 
 \subsubsection{Linux}
 Use your package manager apt-get or yum, where possible.
-\begin{description}
+\begin{enumerate}
   \item Install Python 3.9 (Debian: python-dev, RedHat: python-devel)
   \item Install NumPy (Debian / RedHat: python-numpy)
   \item Install setuptools (Debian / RedHat: python-setuptools)
   \item On the Terminal:
-      	\begin{listing}
+      	\begin{code}
 		\begin{minted}{bash}
-   	 		python -m pip install -U pip
-    		python -m pip install -U numpy
-    		python -m pip install -U pandas
-    		python -m pip isntall -U pyprophet
-    		python -m pip install -U pyopenms
+python -m pip install -U pip
+python -m pip install -U numpy
+python -m pip install -U pandas
+python -m pip isntall -U pyprophet
+python -m pip install -U pyopenms
         \end{minted}
-        \end{listing}
-\end{description}
+        \end{code}
+\end{enumerate}
 
 \subsection{Benchmark data}
 For the assay library construction pesticide mixes (Agilent Technologies, Waldbronn, Germany) were measured individually in solvent (DDA). 
@@ -116,7 +120,7 @@ Benchmark DIA samples were prepared by spiking different commercially available 
 \subsection{Example Workflow}
 Example workflow for the usage of the DIAMetAlyzer Pipeline in KNIME (see Fig. \ref{fig:oswm_example_wf}). Inputs are the SWATH-MS data in profile mode (.mzML), a path for saving the new target-decoy assay library, the SIRIUS 4.9.0 executable, the DDA data (.mzML), custom libraries and adducts for \KNIMENODE{AccurateMassSearch}, the min/max fragment mass-to-charge to be able to restrict the mass of the transitions and the path to the PyProphet executable. The DDA is used for feature detection, adduct grouping, accurate mass search and forwarded to the \KNIMENODE{AssayGeneratorMetabo}. Here, feature mapping is performed to collect MS2 spectra that belong to a feature. All information collected before (feautre, adduct, putative identification, MS2 spectra) are then internally forwarded to SIRIUS. SIRIUS is used for fragment annotation and decoy generation based on the fragmentation tree re-rooting approach. This information is then used to filter spectra/decoys based on their explained intensity (min. 85\%). Afterwards internal feature linking is performed which is most important for untargeted experiments using a lot of DDA data to construct the library. The constructed target-decoy assay library is processed with the SWATH-MS data in OpenSWATH. The results are used by PyProphet for scoring and output a list of metabolites with their respective q-value and quantitative information.
 
-\begin{figure}[!h]
+\begin{figure}[!ht]
   \centering
   \includegraphics[width=0.95\textwidth]{openswathmetabo/oswm_example_wf.png}
   \caption{Example workflow for the usage of the DIAMetAlyzer Pipeline in KNIME}
@@ -216,26 +220,26 @@ Feature linking (internal): & \\
 
 \noindent In the workflow pyprophet is called after OpenSWATH, it merges the result files, which allows to get enough data for the model training. 
 
-\begin{listing}
+\begin{code}
 \begin{minted}{bash}
 pyprophet merge  --template path_to_target-decoy_assay_library.pqp --out merged.osw  ./*.osw
 \end{minted}
-\end{listing}
+\end{code}
 \noindent Afterwards, the results are scored using the MS1 and MS2 levels and filter for metabolomics scores, which have a low correlation. 
 
-\begin{listing}
+\begin{code}
 \begin{minted}{bash}
 pyprophet score --in  merged.osw  --out  scored.osw --level ms1ms2 --ss_main_score "var_isotope_correlation_score" --ss_score_filter metabolomics
 \end{minted}
-\end{listing}
+\end{code}
 \noindent Export the non filtered results: 
 
-\begin{listing}
+\begin{code}
 \begin{minted}{bash}
 pyprophet export-compound --in scored.osw --out scored + "_pyprophet_nofilter_ms1ms2.tsv" 
 --max_rs_peakgroup_qvalue 1000.0
 \end{minted}
-\end{listing}
+\end{code}
 
 \noindent Please see the workflow for actual parameter values used for the benchmarking dataset. \\
 
